--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <body>
   <div class="container">
    <div class="image">
-    <img alt="Newsletter icon" src="./assets/"/>
+    <img alt="Newsletter icon" src="./assets/news.jpg"/>
    </div>
    <div class="content">
     <h1>
